apps/2a/hmc-system/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-hmc-operator-interaction
  namespace: flux-system
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              product.mirantis.com: hmc
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: hmc
      ports:
        - port: http
  podSelector:
    matchLabels:
      app: source-controller
  policyTypes:
    - Ingress
